<resources>
    <string name="app_name" translatable="false">Tagtoo</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_help">Help</string>
    <string name="title_home">Home</string>
    <string name="title_read">Read</string>
    <string name="title_write">Write</string>
    <string name="button_text">Text</string>
    <string name="button_audio">Audio</string>
    <string name="button_video">Video</string>
    <string name="button_image">Picture</string>
    <string name="nfc_disabled">NFC is disabled in the Settings. Activate it to be able to use this app.</string>
    <string name="list_empty">You have no saved NFC messages, tap the help button at the bottom of your screen to know how to add one.</string>
    <string name="play_button">Play Button</string>
    <string name="section_title_write">Choose the kind of message you want to put on the NFC tag.</string>
    <string name="info_record_audio">Long press the record button to record. Your message can\'t be longer than 30 seconds.</string>
    <string name="info_write_text">Write your text in the box below, it can\'t be more than 248 characters.</string>
    <string name="info_read">Put your phone against the tag you want to read.</string>
    <string name="msg_title_text">NFC text message :</string>
    <string name="msg_title_audio">NFC audio message :</string>
    <string name="title_msg_default">This NFC tag contains :</string>
    <string name="title_msg_params">"Tag NFC %1$s, scanned on %2$s"</string>
    <string name="delete_audio_desc">Are you sure you want to permanentely delete this recording from this tag?</string>
    <string name="delete_audio_title">Delete this audio recording?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="success_write_text">Message successfully associated to tag!</string>
    <string name="error_write_text_server">Error : tag was not detected properly. Try again.</string>
    <string name="success_write_audio">Recording successfully associated to tag!</string>
    <string name="error_write_audio_server">Connection to the server unsuccessful. Make sure you\'re connected and try again.</string>
    <string name="error_write_audio_connection">Connection error.</string>
    <string name="section_help_tag">What is an NFC tag?</string>
    <string name="section_help_write">How to write on an NFC tag?</string>
    <string name="section_help_read">How to read a tag\'s message ?</string>
    <string name="section_help_home">Handle the messages you read</string>
    <string name="section_help_desc_tag">An NFC tag is a little piece of cardboard your phone can communicate with using this app. This app allows you to leave this tag on your fridge and lets anyone with this app add different kinds of messages on it, text or audio (pictures and videos coming later).</string>
    <string name="section_help_desc_write">You can either write text messages directly onto the tag, or record an audio message that will be upload to our server and linked to this tag. Access it using the Write tab on the bottom of the navigation bar.</string>
    <string name="section_help_desc_read">When on the \"Read\" tab of this app, put your phone against the tag to access its content. It will be added to a list of all the ones you read in the \"Home\" Tab.</string>
    <string name="section_help_desc_home">In the \"Home\" tab you can scroll through all the messages you saved and play the audio files that came with them. You can delete permanently delete the audio file by long pressing the audio player.</string>
    <string name="button_end">End</string>
    <string name="transition_key" translatable="false">scale_card</string>
    <string name="title_tags">Your tags</string>
    <string name="title_write_tab">Write a message</string>
    <string name="button_configure">Configure a new tag</string>
    <string name="button_write_msg">Write to an existing tag</string>
    <string name="title_configure_tag">Configure your new tag</string>
    <string name="title_write_audio">Record an audio message</string>
    <string name="label_write_button">If it\'s not, click this button and choose the type of message you want to write</string>
    <string name="label_config_button">If this is your first time writing to this tag</string>
    <string name="label_config_name_edit">How do you wish to name your new tag ? (eg.: Kitchen, Bedroom, Wristband or Keychain…)</string>
    <string name="label_config_thumbnails">Choose the thumbnail for your tag :</string>
    <string name="label_config_password_switch">Protect it with a password ?</string>
    <string name="selected_thumbnail_text">Selected thumbnail : %1$s.</string>
    <string name="next">Next</string>
    <string name="audio">Audio</string>
    <string name="picture">Picture</string>
    <string name="video">Video</string>
    <string name="text">Text</string>
    <string name="read_success">Tag successfully read !</string>
    <string name="option_remove">Remove from list</string>
    <string name="option_delete">Delete all data</string>
    <string name="none">none</string>
    <string name="thumbnail_title_kitchen">Kitchen</string>
    <string name="thumbnail_title_living_room">Living Room</string>
    <string name="thumbnail_title_hallway">Hallway</string>
    <string name="thumbnail_title_bedroom">Bedroom</string>
    <string name="thumbnail_title_bathroom">Bathroom</string>
    <string name="thumbnail_title_garage">Garage</string>
    <string name="thumbnail_title_other">Other</string>
    <string name="toast_success_conf">Configuration successful ! You can now write to this tag.</string>
    <string name="toast_error_conf_upload">There was an error while communicating with the server. Please try again later.</string>
    <string name="toast_error_conf_connect">There was an error connecting to the server. Please check your internet connection.</string>
    <string name="toast_conf_begin">Please wait while your tag is being configured.</string>
    <string name="error_configure_tag">Error : tag was not properly detected. Please try again.</string>
    <string name="error_configure_io">An error occurred while connecting to the tag, Please try again.</string>
    <string name="error_configure_format">Error in your tag name : there may be forbidden caracters or it is too long.</string>
    <string name="success_write_picture">Picture successfully associated to tag!</string>
    <string name="error_write_picture_server">Connection to the server unsuccessful. Make sure you\'re connected and try again.</string>
    <string name="success_write_video">Video successfully associated to tag!</string>
    <string name="error_download">There was an error downloading the tag\'s content.</string>
</resources>
