<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tagtoo.android.ConfigureTagActivity"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="8dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/title_configure_tag"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/labelForName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/label_config_name_edit" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textShortMessage"
        android:labelFor="@+id/labelForName"
        android:textColor="@color/colorPrimaryA700"
        android:tooltipText="Tag name" />

    <TextView
        android:id="@+id/labelForThumbnails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/label_config_thumbnails" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/thumbnailList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/selectedThumbText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:text="Selected thumbnail : none." />

    <Switch
        android:id="@+id/switchPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="5dp"
        android:text="@string/label_config_password_switch"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:textColor="?android:attr/textColorSecondary" />

    <FrameLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:inputType="textPassword" />

        <ImageButton
            android:id="@+id/showPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="2dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/transparent"
            android:padding="7dp"
            android:paddingEnd="16dp"
            android:tint="@color/colorDisabled"
            app:srcCompat="@drawable/ic_remove_red_eye_black_24dp" />
    </FrameLayout>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right|end"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/button"
        android:backgroundTint="@color/colorPrimary"
        android:elevation="3dp"
        android:text="@string/next"
        android:textColor="@android:color/white" />

</LinearLayout>

